Rework the key generation to be Base64 based and complete the Transaction generation.